agate-style.css
* {
    box-sizing: border-box;
}

body {
    font-family:Raleway, sans-serif;
    margin:0;
}

/*header below*/
header {
    width: 100%;
    z-index: -1;
}

.head-text {
    font-family:Raleway, sans-serif;
    text-align:center;
    width:100%;
    padding:10px;
    text-align:center;
    position:relative;
    color:black;
    z-index: 0;
}

/*containers*/
.page-container {
    background-color:#f2f2f2;
    display:flex;
    width:100%;
    flex-flow:row wrap;
    padding: 50px 200px;
}

.main-enclose {
    font-family:arial, sans-serif;
    box-shadow: 0 6px 12px rgba(0,0,0,0.12), 0 6px 12px rgba(0,0,0,0.24);
    transition:0.3s;
    padding:16px 60px;
    width:100%;
    overflow:auto;
    border-radius:5px;
    border: 6px solid #248f8f;
    /*border-image: linear-gradient(#f6b73c, #4d9f0c) 30;
    border-width: 4px;
    border-style: solid;*/
}

/*.main-enclose:hover {
  box-shadow: 0 12px 24px rgba(0,0,0,0.12), 0 9px 18px rgba(0,0,0,0.24); 
}*/

/* .img-center {
    display:block;
    margin-left:auto;
    margin-right:auto;
}

.img-center:hover {
    opacity:0.75;
    transition: opacity 0.3s;
} */

footer {
    background-color:#555;
    padding:20px;
    font-size:14px;
    color:white;
}

/* top navigation */
ul.top-bar {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
}

li.top-bar {
    float: right;
    margin: 0;
    padding: 0;
}

li.top-bar a {
    display: block;
    color: #248f8f;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    margin: 0;
    padding: 0px 10px;
}

.home-image {
    fill: #248f8f;
    width:1.1em;
    height:1.1em;
}

/* journal */
.journal-container {
    display: flex;
    flex-direction: column;
    width: 100%;
    object-fit: contain;
    align-items: stretch;
}

.journal-container > div {
    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
    background-color:white;
    margin: 30px 10px;
    font-size: 30px;
    overflow:hidden;
    line-height: 1.6;
}

.journal-text {
    padding:20px 30px;
    font-size: 16px;
    float:left;
    width: 80%;
}

.journal-images {
    width: 20%;
    height: 100%;
    float:right;
    
}

/*polaroid*/
.polaroid-container {
    display: flex;
    position: relative; /* add position relative to make child elements position absolute */
    flex-wrap:wrap;
    
}
  
.polaroid-container > div {
    padding: 10px;
    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
    margin: 40px 20px;
    position: absolute; 
    font-size:18px;
}
  
.polaroid-container:nth-of-type(odd) > div {
    left: 0; 
    rotate: -7deg;
    background-color:#dfb9be;
    /* background-image: linear-gradient(to right, #ebcec6 , #f2ded9); */
    width: 40%;
}
  
.polaroid-container:nth-of-type(even) > div {
    right: 0; 
    rotate: 5deg;
    background-color: #d6e5cd;
    /* background-image: linear-gradient(to bottom right, #ebcec6 , #f2ded9); */
    width: 45%;
}

.polaroid-container:hover > div, .journal-container:hover > div {
    transition:0.5s;
    opacity:0.75;
}

.polaroid-container:empty {
    display: none;
}

div.polaroid-text {
    text-align: center;
    padding: 0px 8px;
    font-family: 'Brush Script MT', cursive;
} 

/*tiles */
.content-display {
    line-height: 1.6;
    display:flex;
    flex-wrap:wrap;
    justify-content:center;
    width:100%;
}

.content-display > div {
    /* margin: 20px; */
    box-shadow: 0 6px 12px rgba(0,0,0,0.12), 0 6px 12px rgba(0,0,0,0.24);
    transition:0.3s;
    max-height:95vh;
}

/*HEREEEEEEEEEEEEEEEEEEE*/
.question {
    padding:50px;
    font-size:15px;
    overflow: auto;
    max-height:65vh;
    overflow-x: hidden;
    overflow-y: scroll;
}

.question a {
    text-decoration:none;
    color:black;
} 

.button-box {
    text-align:center;
    padding-top:15px;
}

.answer-button {
    display:inline-block;
    font-family:arial, sans-serif;
    border-radius:10px;
    border:none;
    background-color: #29a3a3;
    color:white;
    padding:10px 14px;
    text-align:center;
    text-decoration:none;
    font-size:16px;
    width:60%;
    cursor:pointer;
    margin-top:8px;
    box-shadow: 0 1px 2px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
}

.answer-button:hover {
    background-color:#2eb8b8;
    box-shadow: 0 2px 4px rgba(0,0,0,0.12), 0 2px 4px rgba(0,0,0,0.24); 
    transition:0.4s;    
}
a.discover {
    border-bottom:1.5px dotted #248f8f;
}

a:hover.discover {
    border-bottom:2px dotted #2eb8b8;
    transition:0.4s;
}

/*toolip*/
.tooltip {
    position: relative;
    display: inline-block;
    font-style:italic;
  }
  
  .tooltip .tooltiptext {
    visibility: hidden;
    width: 150px;
    background-color: black;
    color: #fff;
    font-size:10px;
    text-align: center;
    border-radius: 6px;
    padding: 5px 0;
    position: absolute;
    z-index: 1;
    bottom: 150%;
    left: 50%;
    margin-left: -60px;
  }
  
  .tooltip .tooltiptext::after {
    content: "";
    position: absolute;
    top: 100%;
    left: 50%;
    margin-left: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: black transparent;
  }
  
  .tooltip:hover .tooltiptext {
    visibility: visible;
  }
   
  @media screen and (max-width:1000px) {
    .page-container {
        padding: 30px;
    }
}

@media screen and (max-width:600px) {
    .page-container {
        padding: 15px 10px;
    }

    .main-enclose {
        padding:10px;
    }

    .polaroid-container > div {
        padding: 5px;
        box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
        margin: 40px 20px;
        position: absolute; 
        font-size:18px;
      }
      
    .polaroid-container:nth-of-type(odd) > div{
        left: 0; 
        z-index: 0; 
        rotate: -7deg;
        background-color:#dfb9be;
        /* background-image: linear-gradient(to right, #ebcec6 , #f2ded9); */
        width: 40%;
      }
      
    .polaroid-container:nth-of-type(even) > div {
        right: 0; 
        rotate: 5deg;
        background-color: #c8dcbc;
        /* background-image: linear-gradient(to bottom right, #ebcec6 , #f2ded9); */
        width: 45%;
    }
    
    div.polaroid-text {
        text-align: center;
        padding: 0px;
        font-family: 'Brush Script MT', cursive;
        font-size:12px;
    } 
    button.answer-button {
        font-size:12px;
        width:75%;
    }
}

